[tool.poetry]
name = "playground"
version = "0.0.1"
description = "Personal playground."
authors = [
    "Mr. Nobody <nobody@no.body>"
]


[build-system]
requires = ["poetry==0.12.*"]


[tool.poetry.dependencies]
python = "^3.7"
aiohttp = "^3.6.2"
gunicorn = "^20.0.4"
requests = "^2.22.0"


[tool.poetry.dev-dependencies]
